# pidgin-cmds

./: AUTHORS  ChangeLog  NEWS  ProjectHome.md  README  TODO  bundle-windows.sh  configure.ac
src/: Makefile.am  Makefile.mingw
trunk/: ChangeLog  INSTALL.win32  Makefile.mingw  NEWS  README  configure.ac
trunk/src/: Makefile.am  Makefile.mingw  pidgin-grep.c  pidgin-shout.c  purple-grep.c  purple-shout.c
